--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Martin Katrenik <martin.katrenik@merck.com>",
   "license": "MIT",
   "dependencies": {
+    "lodash": "^3.10.0",
     "react": "~0.13.0"
   },
   "devDependencies": {
