--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "Martin Katrenik <martin.katrenik@merck.com>",
   "license": "MIT",
   "dependencies": {
-    "react": "~0.13.0"
+    "react": "~0.13.0",
+    "react-router": "^1.0.0-beta3",
+    "redux": "^0.12.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
