--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
     "bootstrap-sass": "^3.3.5",
     "classnames": "^2.1.3",
     "flexboxgrid": "^6.2.0",
+    "lodash.isplainobject": "^3.2.0",
     "react": "^0.14.0-beta1",
     "react-dom": "^0.14.0-beta1",
     "react-redux": "^0.2.2",
     "react-router": "^1.0.0-beta3",
     "redux": "^1.0.0-rc",
+    "redux-actions": "^0.7.0",
     "redux-devtools": "^0.1.2",
+    "redux-promise": "^0.5.0",
     "redux-react-router": "^0.2.1",
-    "todomvc-app-css": "^2.0.1"
+    "todomvc-app-css": "^2.0.1",
+    "whatwg-fetch": "^0.9.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^2.0.0",
