--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap-sass": "^3.3.5",
     "classnames": "^2.1.3",
     "flexboxgrid": "^6.2.0",
+    "keymirror": "^0.1.1",
     "lodash.isplainobject": "^3.2.0",
     "react": "^0.14.0-beta1",
     "react-dom": "^0.14.0-beta1",
