--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap-sass": "^3.3.5",
     "classnames": "^2.1.3",
     "flexboxgrid": "^6.2.0",
+    "immutable": "^3.7.5",
     "keymirror": "^0.1.1",
     "lodash.isplainobject": "^3.2.0",
     "react": "^0.14.0-beta1",
@@ -39,6 +40,7 @@
     "babel-eslint": "^3.1.19",
     "babel-loader": "^5.2.2",
     "chai": "^3.2.0",
+    "chai-immutable": "^1.3.0",
     "css-loader": "^0.15.1",
     "eslint": "^0.24.0",
     "eslint-loader": "^0.14.1",
